Add install validation tests, coverage gate, and CI GRUB build

--- a/crates/ui-tauri/frontend/index.html
+++ b/crates/ui-tauri/frontend/index.html
@@ -845,7 +845,7 @@
             if (p.label === 'RAIDHOS_EFI' || p.fstype === 'vfat') {
               selectedEspMount = mounts[0];
             }
-            if (p.label === 'RAIDHOS' || p.fstype === 'exfat') {
+            if (p.label === 'DATA' || p.fstype === 'exfat') {
               selectedDataMount = mounts[0];
             }
           });
